# daeo-tracking-solver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ad2024/: daeos.bib  ltexpprt.sty  report.tex  siam.bst
ad2024-slides/: Makefile  daeos.bib  slides.tex  stce-beamer-template.tex
cmake/: FindNAG_dco_cpp.cmake
include/: interoperability_dco_boost_interval.hpp
notebooks/: bnb_results.ipynb  const_definitions.py  figures_ad24_talk.jl  performance_study.jl  simple_daeo_convergence_study.ipynb
notebooks/.ipynb_checkpoints/: bnb_results-checkpoint.ipynb
src/: ad2024-demo.cpp  bnb-optimizer-demo.cpp  emergent_optima.cpp  idea_prototypes.cpp  main.cpp  verify-optimizer.cpp
src/daeo_solver/: daeo_solver.hpp
src/include/fmt_extensions/: interval.hpp  numeric_containers.hpp
src/include/utils/: daeo_utils.hpp  eigen_interval_extensions.hpp  fmt_extensions.hpp  interval_eigen_traits.hpp  io.hpp  matrices.hpp  ntuple.hpp  propagate_dynamic.hpp  sylvesters_criterion.hpp
src/local_optima_solver/: local_optima_solver.hpp  settings.hpp
src/solver/: bnb_config.hpp  bnb_settings.hpp  daeo_solver.hpp  eigen_objective.hpp  global_optimizer.hpp  grids.hpp  local_optima_bnb.hpp  local_optima_solver.hpp  logging.hpp  objective.hpp  settings.hpp  utils.hpp  xprime.hpp
